# a800-rust-test

./: Cargo.toml  Makefile  main.c
.cargo/: config
cfg/: 800xl_elf.cfg  link_elf.ld
src/: factorial.rs  lib.rs  main.rs  print.rs  write_to.rs
tools/: elf2xex.py
