[package]
name = "atest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
volatile-register = "0"
# compiler_builtins = { path = "/home/mrk/private/rust/rust/compiler-builtins" }

[workspace]

[profile.dev]
opt-level = "s"
lto = true
debug-assertions = false
overflow-checks = false

[profile.release]
lto = true
